[package]
name = "password-manager-converter-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["serde"] }
csv = "1.2.1"
itertools = "0.10.5"
serde = {version = "1.0.160", features = ["serde_derive"]}
serde_json = "1.0.96"
